--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-
+<!DOCTYPE html> 
+<html lang="pt-BR"> 
+<head> 
+ <meta charset="UTF-8" /> 
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+ <title>AliTech - Criação de Sites</title> 
+ <style> 
+ body { margin: 0; font-family: Arial, sans-serif; background: #f5f5f5; color: #333; } 
+ header { background: #0d1b2a; color: white; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; } 
+ nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; } 
+ .hero { height: 70vh; background-image: url('COLOQUE_AQUI_O_LINK_DA_IMAGEM_DO_HEADER'); background-size: cover; background-position: center; display: flex; justify-content: center; align-items: center; text-align: center; color: white; } 
+ .hero h1 { font-size: 3rem; backdrop-filter: blur(4px); padding: 20px; border-radius: 10px; } 
+ .section { padding: 60px 40px; background: white; margin: 20px auto; max-width: 1100px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.1); } 
+ .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; } 
+ .service-card { background: #e9ecef; padding: 20px; border-radius: 10px; text-align: center; } 
+ .service-card img { width: 100%; max-height: 150px; object-fit: cover; border-radius: 10px; margin-bottom: 15px; } 
+ footer { background: #0d1b2a; color: white; text-align: center; padding: 20px; margin-top: 40px; } 
+ </style> 
+</head> 
+<body> 
+ <header> 
+ <img src="logo_alitech.png" alt="Logo da AliTech" style="height: 40px; margin-right: 10px;"> 
+ <h2>AliTech</h2> 
+ <nav> 
+ <a href="                   
+ <a href="#servicos">Serviços</a> 
+ <a href="                  
+ <a href="#contato">Contato</a> 
+ </nav> 
+ </header> 
+ <section class="hero" id="home"> 
+ <h1>Transformamos Ideias em Sites Profissionais</h1> 
+ </section> 
+ <section class="section" id="servicos"> 
+ <h2>Nossos Serviços</h2> 
+ <div class="services"> 
+ <div class="service-card"> 
+ <img src="LINK_DA_IMAGEM_1" alt="Criação de Sites" /> 
+ <h3>Criação de Sites</h3> 
+ <p>Sites modernos, rápidos e totalmente profissionais.</p> 
+ </div> 
+ <div class="service-card"> 
+ <img src="LINK_DA_IMAGEM_2" alt="Landing Pages" /> 
+ <h3>Landing Pages</h3> 
+ <p>Páginas otimizadas para conversões e vendas.</p> 
+ </div> 
+ <div class="service-card"> 
+ <img src="LINK_DA_IMAGEM_3" alt="Loja Virtual" /> 
+ <h3>Lojas Virtuais</h3> 
+ <p>E-commerce completo para impulsionar seus negócios.</p> 
+ </div> 
+ </div> 
+ </section> 
+ <section class="section" id="sobre"> 
+ <h2>Sobre a AliTech</h2> 
+ <p>A AliTech é uma empresa especializada em desenvolvimento de sites profissionais, oferecendo soluções modernas, rápidas e personalizadas para ajudar empresas a se destacarem no ambiente digital.</p> 
+ <img src="LINK_DA_IMAGEM_SOBRE" alt="Sobre a Empresa" style="width:100%; border-radius:10px; margin-top:20px;" /> 
+ </section> 
+ <section class="section" id="contato"> 
+ <h2>Entre em Contato</h2> 
+ <p>Email: contato@alitech.com.br</p> 
+ <p>Telefone: (00) 00000-0000</p> 
+ <img src="LINK_DA_IMAGEM_CONTATO" alt="Contato" style="width:100%; border-radius:10px; margin-top:20px;" /> 
+ </section> 
+ <footer> 
+ <p> 2025 AliTech - Todos os direitos reservados</p> 
+ </footer> 
+</body> 
+</html>
