Update index.html 2

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head> 
 <body> 
  <header> 
+ <div style="display: flex; align-items: center;"> 
  <img src="logo_alitech.png" alt="Logo da AliTech" style="height: 40px; margin-right: 10px;"> 
  <h2>AliTech</h2> 
+ </div> 
  <nav> 
  <a href="                   
  <a href="#servicos">Serviços</a> 
