--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  body { margin: 0; font-family: Arial, sans-serif; background: #f5f5f5; color: #333; } 
  header { background: #0d1b2a; color: white; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; } 
  nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; } 
- .hero { height: 70vh; background-image: url('imagem_header.jpg'); background-size: cover; background-position: center; display: flex; justify-content: center; align-items: center; text-align: center; color: white; } 
+ .hero { height: 70vh; background-image: url('blob:https://web.whatsapp.com/b2d2fc90-9e40-4348-805a-5007f44ce956'); background-size: cover; background-position: center; display: flex; justify-content: center; align-items: center; text-align: center; color: white; } 
  .hero h1 { font-size: 3rem; backdrop-filter: blur(4px); padding: 20px; border-radius: 10px; } 
  .section { padding: 60px 40px; background: white; margin: 20px auto; max-width: 1100px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.1); } 
  .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; } 
