--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Criação de Sites Profissionais em Inácio Martins, PR. Sites rápidos, responsivos e otimizados (SEO) para gerar mais vendas para o seu negócio.">
-    <title>aliTech | Criação de Sites Profissionais em Inácio Martins, PR</title>
+    <meta name="description" content="Criação de Sites Profissionais. Sites rápidos, responsivos e otimizados (SEO) para gerar mais vendas para o seu negócio.">
+    <title>aliTech | Criação de Sites Profissionais</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -100,7 +100,7 @@
         .subtitle { color: var(--primary-color); font-weight: 700; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; margin-bottom: 10px; display: block; }
         .about-text h2 { font-size: 2.2rem; margin-bottom: 20px; }
 
-        /* --- NOVO CSS: PERFIL DO DESENVOLVEDOR --- */
+        /* --- CSS: PERFIL DO DESENVOLVEDOR --- */
         .dev-card {
             background-color: var(--white);
             border: 1px solid #e2e8f0;
@@ -195,11 +195,11 @@
             color: var(--primary-dark) !important;
         }
 
-        /* Contato (Ajustado para focar nas informações e no botão WhatsApp) */
+        /* Contato */
         .contact-container { 
             display: flex; 
             gap: 50px; 
-            align-items: flex-start; /* Alinha o conteúdo ao topo */
+            align-items: flex-start; 
         }
         .contact-info { flex: 1; }
         .info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
@@ -219,9 +219,9 @@
             margin-bottom: 15px;
             color: var(--primary-dark);
         }
-        /* Cor verde para o botão de WhatsApp (Melhor UX) */
+        /* Botão de WhatsApp */
         .btn-whatsapp {
-            background-color: #25d366; /* Verde WhatsApp */
+            background-color: #25d366; 
             color: white;
             padding: 15px 30px;
             font-size: 1.1rem;
@@ -232,7 +232,7 @@
             width: 100%;
         }
         .btn-whatsapp:hover {
-            background-color: #128c7e; /* Verde Escuro */
+            background-color: #128c7e; 
             transform: translateY(-2px);
         }
 
@@ -329,7 +329,7 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <h1>Criação de Sites Profissionais que Geram Resultados</h1>
-                <p>A aliTech desenvolve sites modernos, rápidos e otimizados para empresas de Inácio Martins e região que querem vender mais.</p>
+                <p>A aliTech desenvolve sites modernos, rápidos e otimizados para empresas que querem vender mais.</p>
                 <a href="#" class="btn" data-whatsapp-cta>Quero meu site profissional</a>
             </div>
             <div class="hero-img">
@@ -346,8 +346,8 @@
                 </div>
                 <div class="about-text">
                     <span class="subtitle">Sobre a aliTech</span>
-                    <h2>Seu Parceiro de Desenvolvimento Web em Inácio Martins, PR</h2>
-                    <p>A aliTech é uma empresa de Inácio Martins - PR com um propósito claro: ajudar empresas a se posicionarem com autoridade na internet.</p>
+                    <h2>Seu Parceiro de Desenvolvimento Web</h2>
+                    <p>A aliTech é uma empresa com um propósito claro: ajudar empresas a se posicionarem com autoridade na internet.</p>
                     <p>Nosso foco é entregar soluções personalizadas, rápidas e seguras. Combinamos design estratégico com tecnologia de ponta para garantir que seu site trabalhe por você 24 horas por dia.</p>
                     <a href="#servicos" class="btn btn-outline">Conheça nossos serviços</a>
                 </div>
@@ -453,8 +453,8 @@
                 </div>
                 <div class="diff-item">
                     <i class="fas fa-headset" aria-hidden="true"></i>
-                    <h4>Suporte Local</h4>
-                    <p>Atendimento próximo e dedicado, direto de Inácio Martins, para um relacionamento de confiança.</p>
+                    <h4>Suporte Humanizado</h4>
+                    <p>Atendimento próximo e dedicado, focado em entender sua necessidade e garantir sua satisfação.</p>
                 </div>
             </div>
         </div>
@@ -515,7 +515,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <a href="#inicio" class="logo" style="color:white; margin-bottom:15px; display:block;">ali<span>Tech</span></a>
-                    <p style="font-size: 0.9rem;">Desenvolvimento de sites profissionais em Inácio Martins e região. Foco em velocidade, conversão e SEO.</p>
+                    <p style="font-size: 0.9rem;">Desenvolvimento de sites profissionais com foco em velocidade, conversão e SEO.</p>
 
                     <div class="social-links">
                         <a href="https://wa.me/554298633284" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
