--- a/index.html
+++ b/index.html
@@ -95,7 +95,26 @@
         /* Sobre */
         .about-content { display: flex; align-items: center; gap: 60px; margin-bottom: 60px; }
         .about-img { flex: 1; }
-        .about-img img { border-radius: 12px; height: 400px; object-fit: cover; width: 100%; }
+        
+        /* NOVO CSS PARA O VÍDEO RESPONSIVO */
+        .video-responsive {
+            position: relative;
+            padding-bottom: 56.25%; /* Proporção 16:9 */
+            height: 0;
+            overflow: hidden;
+            border-radius: 12px;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+            background: #000;
+        }
+        .video-responsive iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+
         .about-text { flex: 1; }
         .subtitle { color: var(--primary-color); font-weight: 700; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; margin-bottom: 10px; display: block; }
         .about-text h2 { font-size: 2.2rem; margin-bottom: 20px; }
@@ -257,7 +276,7 @@
         /* Responsivo */
         @media (max-width: 992px) {
             .hero-content, .about-content { flex-direction: column; text-align: center; }
-            .hero-img, .about-img { order: -1; }
+            .hero-img, .about-img { order: -1; width: 100%; }
             .hero-text h1 { font-size: 2.5rem; }
             .about-img img { height: 350px; }
             .dev-content { flex-direction: column; align-items: flex-start; }
@@ -342,7 +361,9 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-img">
-                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=1470&auto=format&fit=crop" alt="Equipe de desenvolvedores em reunião e planejamento">
+                    <div class="video-responsive">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/VSLpBSM4wu8?si=PXtfcZKvoLHgGYNK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="about-text">
                     <span class="subtitle">Sobre a aliTech</span>
